Testing out different images setup

--- a/_notebooks/2020-03-08-trash-panda.ipynb
+++ b/_notebooks/2020-03-08-trash-panda.ipynb
@@ -11,7 +11,7 @@
     "* toc: true\n",
     "* badges: true\n",
     "* categories: [deep learning, computer vision]\n",
-    "* image: images/trash_panda/trash-panda-icon.png"
+    "* image: images/trash-panda-icon.png"
    ]
   },
   {
