Updated images to github links

--- a/_notebooks/2020-01-12-post-here.ipynb
+++ b/_notebooks/2020-01-12-post-here.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "* toc: true\n",
     "* badges: true\n",
-    "* categories: [recommender systems, natural language processing, machine learning]\n",
+    "* categories: [workshop]\n",
     "* image: images/post-here-landing-crop.png"
    ]
   },
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Post Here: Subreddit Suggester](images/post_here/post-here-landing.png \"[Post Here: Subreddit Suggester\")"
+    "![Post Here: Subreddit Suggester](https://raw.githubusercontent.com/tobias-fyi/assetstash/master/visual/images/post_here/post-here-landing.png \"[Post Here: Subreddit Suggester\")"
    ]
   },
   {
